@@ -1,3 +1,9 @@
+2006-05-23  Nancy  <nancy.cai@sun.com>
+
+	Fix #341803
+	* storage/Makefile.am:replace "ximian-connector-setup" by
+	"exchange-connector-setup"
+
 2006-05-17  Harish Krishnaswamy  <kharish@novell.com>
 
 	* configure.in: Append -DLDAP_DEPRECATED to LDAP_CFLAGS and
